--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jspdf": "^2.3.1",
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
+    "excel4node": "^1.7.2",
     "nodemon": "^2.0.6"
   }
 }
