--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
