--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node .",
     "start:dev": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --testEnvironment=node"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "excel4node": "^1.7.2",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   }
 }
